# JARDO

./: .gitignore  PACKAGING.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_phase1_core.py  0002_routing_log.py  0003_sentinel.py  0004_reports.py  0005_tasks.py  0006_supervision.py  0007_response_cache.py  0008_semantic_cache.py  0009_projects.py
core/: __init__.py  agent_memory.py  api_auth.py  app.py  appsettings.py  assistant.py  behavior_evals.py  briefing.py  cache.py  cli.py  config.py  db.py  embeddings.py  env_path.py  i18n.py  identity.py  inproc_queue.py  memory.py  observer.py  orchestrator.py  paths.py  persona.py  projects.py  reporter.py  schema.py  secrets.py  supervision.py  supervisor.py  totp.py  worker.py
core/agents/: __init__.py  adapters.py  intake.py  onboard.py  runner.py  terminal_launch.py  terminal_watch.py  terminals.py  workspace.py
core/autonomy/: __init__.py  decider.py
core/coding_env/: __init__.py  detect.py  executor.py  hook_install.py  operator.py  pretooluse_hook.py  prompt_responder.py  supervised_agent.py
core/computer_use/: __init__.py  monitor.py  pty_terminal.py  real_terminal.py
core/inference/: fireworks.py  ollama.py  providers.py
core/mcp_server/: __init__.py  __main__.py  client.py  server.py
core/router/: classifier.py  evals.py  pricing.py  router.py  spend.py
core/sentinel/: broker.py  checks.py  models.py
core/voice/: __init__.py  denoise.py  loop.py  mic.py  presence.py  stt.py  tts.py  wakeword.py
desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src/: App.tsx  api.ts  styles.css  useInputMode.ts
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: Agents.tsx  Approvals.tsx  Briefing.tsx  Build.tsx  Chat.tsx  HalftoneAvatar.tsx  Jardo.tsx  Onboarding.tsx  Reports.tsx  Savings.tsx  Settings.tsx  Splash.tsx  StatusBar.tsx  Voice.tsx
evals/: alignment.jsonl  intents.jsonl  routine.jsonl  safety.jsonl  trivial.jsonl
inference/: provision-vllm-droplet.sh  routing.toml
infra/: docker-compose.yml
landing/: index.html  install.sh  main.js  styles.css  vercel.json
landing/api/: models.js  status.js  usage.js
landing/api/chat/: completions.js
mcp/claude-code/: jardo_pretooluse_hook.py  jarvis_pretooluse_hook.py  settings-snippet.json
packaging/: jardo_core_main.py
scripts/: amd-serve.sh  amd_openai_server.py  build-core-binary.sh  build-macos-dmg.sh  create-signing-cert.sh  dev-down.sh  dev-up.sh
tests/: conftest.py  test_agents.py  test_assistant.py  test_autonomy.py  test_behavior_evals.py  test_briefing.py  test_cache.py  test_chat_local.py  test_classifier.py  test_cloud_redaction.py  test_coding_env.py  test_coding_executor.py  test_computer_use.py  test_conservative_safety.py  test_decline_guidance.py  test_denoise.py  test_embedded_sqlite.py  test_evals.py  test_fireworks_client.py  test_frontdoor.py  test_hook_install.py  test_intake.py  test_learned_allowlist.py  test_mcp_server.py  test_memory.py  test_memory_training.py  test_observer.py  test_onboard.py  test_orchestrator.py  test_persona.py  test_presence.py  test_pricing.py  test_projects.py  test_prompt_responder.py  test_providers.py  test_reporter.py  test_router.py  test_secrets.py  test_sentinel.py  test_session_report.py  (+7 more)
