[project]
name = "jardo-core"
version = "0.1.0"
description = "Jardo master agent — core backend (see JARDO_BUILD_SPEC.md)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",  # embedded (SQLite) datastore for the self-contained desktop build
    "alembic>=1.13",
    "arq>=0.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "cryptography>=42.0",
    "mcp[cli]>=1.28.1",
    "psutil>=7.2.2",
    "pexpect>=4.9.0",
    "piper-tts>=1.4.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
jardo = "core.cli:app"
jardo-mcp = "core.mcp_server.server:main"
jardo-hook = "core.coding_env.pretooluse_hook:main"

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.2.1",
    "numpy>=2.5.0",
    "openwakeword>=0.4.0",
    "sounddevice>=0.5.5",
]
# Optional noise suppression (noisereduce — MIT, numpy-2 compatible, no torch).
# Separate opt-in extra: uv sync --extra denoise
denoise = [
    "noisereduce>=3.0.0",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
