[package]
name = "jardo-desktop"
version = "0.1.0"
description = "Jardo desktop shell — Phase 5 (tray, chat, permission broker UI)"
authors = ["Jardo"]
edition = "2021"
rust-version = "1.77.2"

# See start-project-structure.md: main.rs is a thin shim over lib.rs so the same
# entry point works for desktop and (future) mobile builds.
[lib]
name = "jardo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` feature required for the system tray (system-tray.md).
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP proxy to the core at http://127.0.0.1:8000. rustls avoids an OpenSSL
# system dependency; the core is plain HTTP on loopback for now.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
log = "0.4"

[features]
# Used to enable the Tauri dev-tools in debug builds.
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
